--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
             <div class="bg-white shadow-lg rounded-lg overflow-hidden">
                 <div class="p-6">
                     <h2 class="text-xl font-semibold text-blue-600 mb-3">ফেসবুক থেকে একটি ভিডিও</h2>
-                    <div class="aspect-w-16 aspect-h-9"> <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2Fabdur07rahman11%2Fvideos%2F728369389626418%2F&show_text=true&width=476&t=0" width="476" height="591" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+                    <div class="aspect-w-16 aspect-h-9"> 
+                        <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2Fabdur07rahman11%2Fvideos%2F728369389626418%2F&show_text=true&width=476&t=0" 
+                                                             width="476" height="591" style="border:none;overflow:hidden" 
+                            scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; 
+                            web-share" allowFullScreen="true"></iframe>
                     </div>
                     <p class="text-gray-700 text-sm mt-3 mb-1">শেয়ার করা হয়েছে: [আজকের তারিখ]</p>
                     <p class="text-gray-600 mb-4 leading-relaxed">
@@ -63,10 +67,12 @@
             </div>
 
             <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-                <img src="https://placehold.co/600x400/BFDBFE/1E3A8A?text=পোস্ট+১+এর+ছবি" alt="পোস্টের ছবি" class="w-full h-48 object-cover">
+                <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2Fabdur07rahman11%2Fvideos%2F2161072478049006%2F&show_text=true&width=267&t=0" 
+                    width="267" height="591" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; 
+                    web-share" allowFullScreen="true"></iframe>
                 <div class="p-6">
                     <h2 class="text-xl font-semibold text-blue-600 mb-2">পোস্টের শিরোনাম ১</h2>
-                    <p class="text-gray-700 text-sm mb-1">প্রকাশের তারিখ: ১৮ মে, ২০২৫</p>
+                    <p class="text-gray-700 text-sm mb-1">প্রকাশের তারিখ: ১৯ মে, ২০২৫</p>
                     <p class="text-gray-600 mb-4 leading-relaxed">
                         এটি প্রথম পোস্টের একটি সংক্ষিপ্ত বিবরণ...
                     </p>
